force-app/main/default/objects/SA_Identification__c/SA_Identification__c.object-meta.xml
<CustomObject>
    <label>SA Identification</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Identification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Identifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>