force-app/main/default/objects/SA_Identification__c/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Identification Number</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>