force-app/main/default/objects/SA_Identification__c/fields/Number_of_Searches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Searches__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Searches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>